--- a/Nobel Prize Winners/exploratory_data_analysis.ipynb
+++ b/Nobel Prize Winners/exploratory_data_analysis.ipynb
@@ -3829,7 +3829,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## age_to_nobel"
+        "### age_to_nobel"
       ]
     },
     {
