--- a/News Groups/20_newsgroups.ipynb
+++ b/News Groups/20_newsgroups.ipynb
@@ -6,7 +6,7 @@
       "name": "20_newsgroups.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTfaUiaog5QOmoXa6EOhRZ",
+      "authorship_tag": "ABX9TyNoMB8oaqLIMWX5vz4CkzjL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,10 +50,15 @@
       "metadata": {
         "id": "hWc8AnEnnmFR",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "f08447e7-e93b-4d28-b965-116730b49651"
       },
       "source": [
         "# Essentials\n",
+        "import re\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -75,6 +80,91 @@
         "# Ignore warning\n",
         "# import warnings\n",
         "# warnings.filterwarnings('ignore')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wqBsq0HPNkQ9",
+        "colab_type": "text"
+      },
+      "source": [
+        "__Helper function__"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jPeHdT-xNmtk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def check_none(ls):\n",
+        "    \"\"\"\n",
+        "    Check is there any NoneType element inside a list\n",
+        "    \"\"\"\n",
+        "    num_none = 0\n",
+        "    for element in ls:\n",
+        "        if element is None:\n",
+        "            num_none += 1\n",
+        "    return num_none\n",
+        "\n",
+        "\n",
+        "def cleaning_text(text):\n",
+        "    \"\"\"\n",
+        "    Cleaning each text with custom specification using Regular Expression\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    text : str\n",
+        "        Text to clean\n",
+        "\n",
+        "    Return\n",
+        "    ------\n",
+        "    Cleaned text\n",
+        "    \"\"\"\n",
+        "\n",
+        "    splitted = text.split('\\n')\n",
+        "    email_pattern = re.compile(r\"\\S+@\\S+\")      \n",
+        "    special_chars_pattern = re.compile(r\"[^\\w\\s'\\\"_]\")\n",
+        "    space_pattern = re.compile(r\"[\\s]{1,}\")\n",
+        "    num_pattern = re.compile(r\"\\d+\")\n",
+        "\n",
+        "    for i in range(len(splitted)):\n",
+        "\n",
+        "        # Replace the sentence which startswith From, Subject, In-Reply-To, Organization, Lines (header)\n",
+        "        # with single white space\n",
+        "        if splitted[i].startswith('From:') or splitted[i].startswith('Subject:') or \\\n",
+        "                splitted[i].startswith('In-Reply-To') or splitted[i].startswith('Organization:') or \\\n",
+        "                splitted[i].startswith('Lines:') or splitted[i].startswith('Originator:') or \\\n",
+        "                splitted[i].startswith('Nntp-Posting-Host:') or splitted[i].startswith('Distribution:'):\n",
+        "            splitted[i] = ' '\n",
+        "\n",
+        "        # if the sentence contains email, it will be replaced with single white space\n",
+        "        splitted[i] = email_pattern.sub('', splitted[i])\n",
+        "\n",
+        "        # Removing some special characters\n",
+        "        splitted[i] = special_chars_pattern.sub('', splitted[i])\n",
+        "\n",
+        "        # If more than one white space between words, replace it with single white space\n",
+        "        splitted[i] = space_pattern.sub(' ', splitted[i])\n",
+        "\n",
+        "        # Removing numbers\n",
+        "        splitted[i] = num_pattern.sub('', splitted[i])\n",
+        "    \n",
+        "    return ' '.join(splitted).strip()"
       ],
       "execution_count": 2,
       "outputs": []
@@ -100,7 +190,7 @@
         "bunch_train = fetch_20newsgroups(subset='train')\n",
         "bunch_test = fetch_20newsgroups(subset='test')"
       ],
-      "execution_count": 27,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -122,12 +212,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "29f527c1-07a2-4170-d5c2-9ec62fbd6644"
+        "outputId": "23cd5b97-f2da-493b-bb9e-08982246664b"
       },
       "source": [
         "bunch_train.keys()"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +229,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 4
         }
       ]
     },
@@ -152,12 +242,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "5a5f7b88-1891-4cab-8d12-612692974f29"
+        "outputId": "3c77f4a7-023f-4084-9ee4-88e972173dfc"
       },
       "source": [
         "print(bunch_train['DESCR'])"
       ],
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +500,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "a365ebc7-9536-40f8-df5f-da93b6d97734"
+        "outputId": "1641fc0c-dd12-424a-c3a7-85defefc4549"
       },
       "source": [
         "# How many data points in training set and test set\n",
@@ -418,7 +508,7 @@
         "print(f'Number of data points in test set: {len(bunch_test.target)}')\n",
         "print(f'Total data points: {len(bunch_train.target) + len(bunch_test.target)}')"
       ],
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,13 +530,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
-        "outputId": "c697ffd9-b826-41db-a817-dd29fee24928"
+        "outputId": "c4eb8ea5-48f2-46ea-c8e3-84f7ed0c9624"
       },
       "source": [
         "# Target names \n",
         "bunch_train.target_names"
       ],
-      "execution_count": 30,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +567,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 7
         }
       ]
     },
@@ -500,12 +590,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "14f29687-d88b-43b3-cabe-81b1214255aa"
+        "outputId": "7926b2e4-7b14-4b5e-8f0e-595ead05ce37"
       },
       "source": [
         "print(bunch_train.data[0])"
       ],
-      "execution_count": 32,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,12 +646,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9df82489-4a4b-4334-c46c-d99eb89538ba"
+        "outputId": "d854f03a-ea3d-4a20-c9ff-2cd7f6cb43e9"
       },
       "source": [
         "print(bunch_train.target_names[bunch_train.target[0]])"
       ],
-      "execution_count": 35,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,16 +693,354 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "duDGhF4QxANc",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the preliminary step, we will evaluate our data. Is it contain null values? Or anything suspicious that will make our model less predictive."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dQ_wovtyyIwY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "05ff2e51-c5ba-4245-8c2d-af5f432428b8"
+      },
+      "source": [
+        "# any missing values in target vector (training and test)\n",
+        "print('Any missing values in training target vector:', np.isnan(bunch_train.target).sum())\n",
+        "print('Any missing values in test target vector: ', np.isnan(bunch_test.target).sum())"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Any missing values in training target vector: 0\n",
+            "Any missing values in test target vector:  0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g0-BAI4oMpsj",
+        "colab_type": "text"
+      },
+      "source": [
+        "No missing values in target vectors."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-2w8JZ4eNV1C",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "f3d76935-9325-49a6-c877-03e3b9922642"
+      },
+      "source": [
+        "# any missing value in feature data (training and test)\n",
+        "print('Any missing values in training feature data:', check_none(bunch_train.data))\n",
+        "print('Any missing values in test feature data:', check_none(bunch_test.data))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Any missing values in training feature data: 0\n",
+            "Any missing values in test feature data: 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VdToIADgOF7z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Also no missing values in feature data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "he9J2nRPOJd-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now, to become more convenience we put feature data (training and test set) also target vector into their own variable."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5dzUuvzlOj6N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_data = bunch_train.data\n",
+        "test_data = bunch_test.data\n",
+        "train_target = bunch_train.target\n",
+        "test_target = bunch_test.target"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fMHmnc29O0c-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        },
+        "outputId": "a550c0cd-b415-437d-fa30-e4e5c5b60097"
+      },
+      "source": [
+        "# Look at 100th data point in feature data\n",
+        "print(train_data[99])"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "From: tmc@spartan.ac.BrockU.CA (Tim Ciceran)\n",
+            "Subject: Re: Hijaak\n",
+            "Organization: Brock University, St. Catharines Ontario\n",
+            "X-Newsreader: TIN [version 1.1 PL9]\n",
+            "Lines: 15\n",
+            "\n",
+            "Haston, Donald Wayne (haston@utkvx.utk.edu) wrote:\n",
+            ": Currently, I use a shareware program called Graphics Workshop.\n",
+            ": What kinds of things will Hijaak do that these shareware programs\n",
+            ": will not do?\n",
+            "\n",
+            "I also use Graphic Workshop and the only differences that I know of are that\n",
+            "Hijaak has screen capture capabilities and acn convert to/from a couple of\n",
+            "more file formats (don't know specifically which one).  In the April 13\n",
+            "issue of PC Magazine they test the twelve best selling image capture/convert\n",
+            "utilities, including Hijaak.\n",
+            "\n",
+            "TMC.\n",
+            "(tmc@spartan.ac.brocku.ca)\n",
+            "\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gHMpipkOO_t3",
+        "colab_type": "text"
+      },
+      "source": [
+        "As we can see, our data composed by header and footer, which would not be beneficial or probably make our model tend to overfit. This time, we will remove it manually. (Actually, we can set arguments in \"fetch_20newsgroups\" function to exclude headers, footers and quotes, but for learning purpose, we will do it manually)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZkcQxtwjUwHW",
+        "colab_type": "text"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UwSQ12HzUwc6",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Data Cleaning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wvcp_9lh5fyg",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the section helper function above, we have defined a function to clean our data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7jxGIwoC5m0H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_data_cleaned = []\n",
+        "for element in train_data:\n",
+        "    train_data_cleaned.append(cleaning_text(element))\n",
+        "\n",
+        "test_data_cleaned = []\n",
+        "for element in test_data:\n",
+        "    test_data_cleaned.append(cleaning_text(element))"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vu0IO5iz6sBb",
+        "colab_type": "text"
+      },
+      "source": [
+        "__Comparing uncleaned and cleaned data__"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oQ3I4quw6NUw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 510
+        },
+        "outputId": "48b7cb1d-3f7f-4403-8f85-e3dcb1644624"
+      },
+      "source": [
+        "# original data\n",
+        "print(train_data[2109])"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "From: jvigneau@cs.ulowell.edu (Joe Vigneau)\n",
+            "Subject: Re: [soc.motss, et al.] \"Princeton axes matching funds for Boy Scouts\"\n",
+            "In-Reply-To: bevans@carina.unm.edu's message of 4 Apr 1993 12:19:20 GMT\n",
+            "Organization: -\n",
+            "\t<1993Apr3.214557.24073@midway.uchicago.edu> <1pmjo8INN2l0@lynx.unm.edu>\n",
+            "Lines: 21\n",
+            "\n",
+            "In article <1pmjo8INN2l0@lynx.unm.edu> bevans@carina.unm.edu (Mathemagician) writes:\n",
+            "\n",
+            "   Just what do gay people do that straight people don't?\n",
+            "\n",
+            "Absolutely nothing.\n",
+            "\n",
+            "I'm a VERY straight(as an arrow), 17-year old male that is involved in the BSA.\n",
+            "\n",
+            "I don't care what gay people do among each other, as long as they don't make\n",
+            "passes at me or anything.  At my summer camp where I work, my boss is gay.\n",
+            "Not in a 'pansy' way of gay (I know a few), but just 'one of the guys'.\n",
+            "He doesn't push anything on me, and we give him the same respect back, due\n",
+            "to his position.\n",
+            "\n",
+            "If anything, the BSA has taught me, I don't know, tolerance or something.\n",
+            "Before I met this guy, I thought all gays were 'faries'.  So, the BSA HAS\n",
+            "taught me to be an antibigot.\n",
+            "\n",
+            "Basically, It comes down to this: What you do among yourself is your own\n",
+            "business. No one else has the right to tell you otherwise, unless it\n",
+            "violates someone else's civil rights.\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HJTpK6YK6gHx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "95deae6b-56a5-4a1e-81fa-89111eaf14f1"
+      },
+      "source": [
+        "# cleaned data\n",
+        "print(train_data_cleaned[2109])"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "In article Mathemagician writes   Just what do gay people do that straight people don't  Absolutely nothing  I'm a VERY straightas an arrow year old male that is involved in the BSA  I don't care what gay people do among each other as long as they don't make passes at me or anything At my summer camp where I work my boss is gay Not in a 'pansy' way of gay I know a few but just 'one of the guys' He doesn't push anything on me and we give him the same respect back due to his position  If anything the BSA has taught me I don't know tolerance or something Before I met this guy I thought all gays were 'faries' So the BSA HAS taught me to be an antibigot  Basically It comes down to this What you do among yourself is your own business No one else has the right to tell you otherwise unless it violates someone else's civil rights\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-a3Uu0BD69j4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that we have removed email address, special characters, headers, and numbers. Which probably will impacting our model performance, in the end of this notebook, we will compare whether cleaning the data really improve the performance or not."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vn-frw_E7e8M",
+        "colab_type": "text"
+      },
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ERSK-SQh7kJH",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Text Extraction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xGkd_dBJ7nxz",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
