NMF Topic Extraction

--- a/News Groups/20_newsgroups.ipynb
+++ b/News Groups/20_newsgroups.ipynb
@@ -6,7 +6,7 @@
       "name": "20_newsgroups.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMtBJF8DJ4yVC5b6QqH4vuh",
+      "authorship_tag": "ABX9TyOjG8cETdoDWPcffPKQJAwb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "aca123cc-b12a-44c1-ea78-0a5bcd2bf693"
+        "outputId": "f71dfac4-ac7a-4012-9b83-bc2c44698699"
       },
       "source": [
         "# Essentials\n",
@@ -139,7 +139,7 @@
         "\n",
         "    splitted = text.split('\\n')\n",
         "    email_pattern = re.compile(r\"\\S+@\\S+\")      \n",
-        "    special_chars_pattern = re.compile(r\"[^\\w\\s'\\\"_]\")\n",
+        "    special_chars_pattern = re.compile(r\"[^\\w\\s'\\\"]\")\n",
         "    space_pattern = re.compile(r\"\\s+\")\n",
         "    num_pattern = re.compile(r\"\\d+\")\n",
         "\n",
@@ -168,9 +168,18 @@
         "        # Removing numbers\n",
         "        splitted[i] = num_pattern.sub('', splitted[i])\n",
         "    \n",
-        "    return ' '.join(splitted).strip()"
+        "    return ' '.join(splitted).strip()\n",
+        "\n",
+        "\n",
+        "def print_nwords_each_topic(vectorizer, topics, n_words=10):\n",
+        "    \"\"\"\n",
+        "    Print the extracted words for each topic\n",
+        "    \"\"\"\n",
+        "    feature_names = np.array(vectorizer.get_feature_names())\n",
+        "    for i, topic in enumerate(topics):\n",
+        "        print(f\"Topic {(i + 1):2}: {', '.join([str(word) for word in feature_names[topic.argsort()[-n_words:]]])}\")"
       ],
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -216,7 +225,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "53601804-931e-4b90-b295-7c6bf5b7dc28"
+        "outputId": "40a3aaa3-1b4d-4391-efdc-7e5033a54ffd"
       },
       "source": [
         "bunch_train.keys()"
@@ -246,7 +255,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "abb4f6b2-8d2f-475d-f539-92f7f67d3237"
+        "outputId": "b6453582-e5ee-4b1e-ed5a-ac435fb03a3e"
       },
       "source": [
         "print(bunch_train['DESCR'])"
@@ -504,7 +513,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "5647aa85-7a07-43c2-c05c-702e7435e0a6"
+        "outputId": "ef292c70-0dc9-4181-90b0-9065e31721b2"
       },
       "source": [
         "# How many data points in training set and test set\n",
@@ -534,7 +543,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
-        "outputId": "3b5c6efc-1db7-4a9f-de1b-2b0439d42680"
+        "outputId": "584bc685-598f-406e-967b-fe279333e4eb"
       },
       "source": [
         "# Target names \n",
@@ -594,7 +603,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "4c21c870-e7e3-4598-e42e-fca01b0e06a7"
+        "outputId": "8d4071b0-3ea8-4a39-87d9-36d3ee23d3bf"
       },
       "source": [
         "print(bunch_train.data[0])"
@@ -650,7 +659,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1b7fb4e5-9da8-40f0-eb0f-833272442883"
+        "outputId": "0f972cfd-4b55-4fc0-ac50-182556edfe33"
       },
       "source": [
         "print(bunch_train.target_names[bunch_train.target[0]])"
@@ -715,7 +724,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "23cd3b71-094a-4a05-fb6b-6a39009e9058"
+        "outputId": "ec4d4e9e-0a1c-437a-f41f-8f45b9e37b15"
       },
       "source": [
         "# any missing values in target vector (training and test)\n",
@@ -753,7 +762,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "e457af24-b7a6-485c-a713-6a08dfed8b2f"
+        "outputId": "5aac481a-9dd0-4065-8ccf-5d774c336a5e"
       },
       "source": [
         "# any missing value in feature data (training and test)\n",
@@ -817,7 +826,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "8b288207-65ec-442f-fd3b-456e40f7c264"
+        "outputId": "df5f7fd3-a3e2-4197-a4b0-a48e9c6c40c7"
       },
       "source": [
         "# Look at 100th data point in feature data\n",
@@ -903,7 +912,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 479
         },
-        "outputId": "a6fcd9ac-906c-45bd-9dfb-215d1b689d87"
+        "outputId": "4e5f8df1-909b-49d6-8ef9-c3a0951c80e4"
       },
       "source": [
         "fig, axes = plt.subplots(1, 2, figsize=(17, 7), sharey=True)\n",
@@ -986,7 +995,7 @@
         "for element in test_data:\n",
         "    test_data_cleaned.append(cleaning_text(element))"
       ],
-      "execution_count": 21,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1008,13 +1017,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 510
         },
-        "outputId": "08987ecc-6ec9-4c31-f76a-761462ea95b5"
+        "outputId": "8dc80a4a-f69e-4251-8eeb-687556ff573e"
       },
       "source": [
         "# original data\n",
         "print(train_data[2109])"
       ],
-      "execution_count": 22,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1062,13 +1071,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "c31d56e6-6f37-44dc-acfe-8bba2a676d50"
+        "outputId": "62a3daec-2759-4742-c57f-fcd1cbfaa367"
       },
       "source": [
         "# cleaned data\n",
         "print(train_data_cleaned[2109])"
       ],
-      "execution_count": 23,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1130,7 +1139,7 @@
         "count_vectorizer = CountVectorizer(stop_words='english', max_features=1000)\n",
         "tfidf_vectorizer = TfidfVectorizer(stop_words='english', max_features=1000)"
       ],
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1146,7 +1155,7 @@
         "X_test_count = count_vectorizer.transform(test_data_cleaned)\n",
         "X_test_tfidf = tfidf_vectorizer.transform(test_data_cleaned)"
       ],
-      "execution_count": 33,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1158,7 +1167,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "a9f36fa8-a4bd-461d-8352-ba45e45f7952"
+        "outputId": "5f0c7097-4441-4174-81c9-214c1b0ef1b4"
       },
       "source": [
         "print('X_train_count.shape', X_train_count.shape)\n",
@@ -1166,7 +1175,7 @@
         "print('X_test_count.shape', X_test_count.shape)\n",
         "print('X_test_tfidf.shape', X_test_tfidf.shape)"
       ],
-      "execution_count": 34,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1201,17 +1210,184 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "WsDhMtG9gltO",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Topic Extraction"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CCcRo8jQhPN-",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Non Negative Matrix Factorization (NMF)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dWTmacSNhSpn",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# Using CountVectorizer\n",
+        "nmf_count = NMF(n_components=20, solver='mu')\n",
+        "W_count = nmf_count.fit_transform(X_train_count)\n",
+        "H_count = nmf_count.components_\n",
+        "\n",
+        "# Using TfidfVectorizer\n",
+        "nmf_tfidf = NMF(n_components=20, solver='mu')\n",
+        "W_tfidf = nmf_tfidf.fit_transform(X_train_tfidf)\n",
+        "H_tfidf = nmf_tfidf.components_"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BAZw2eJpj09k",
+        "colab_type": "text"
+      },
+      "source": [
+        "Inspecting shape of the transformed matrix"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DLWA0jgEiYkq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "2d7c09c9-6059-4c2b-83de-5d760e413d7c"
+      },
+      "source": [
+        "print('Transformed matrix using NMF (CountVectorizer): ', W_count.shape)\n",
+        "print('Topic Components (CountVectorizer):             ', H_count.shape)\n",
+        "print('Transformed matrix using NMF (TfidfVectorizer): ', W_count.shape)\n",
+        "print('Topic Components (TfidfVectorizer):             ', H_tfidf.shape)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Transformed matrix using NMF (CountVectorizer):  (11314, 20)\n",
+            "Topic Components (CountVectorizer):              (20, 1000)\n",
+            "Transformed matrix using NMF (TfidfVectorizer):  (11314, 20)\n",
+            "Topic Components (TfidfVectorizer):              (20, 1000)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "024_ZX04jxP5",
+        "colab_type": "text"
+      },
+      "source": [
+        "We chose 20 to specify n_components in NMF initialization because we know that there are 20 topics (classes) in this dataset. Now, let's check what words emerge in each topic, both for CountVectorizer data and TfidfVectorizer data."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s56yffBsoHL5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "8c80e879-2de7-45a3-bafc-0cd02636f69c"
+      },
+      "source": [
+        "print_nwords_each_topic(count_vectorizer, H_count)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Topic  1: pm, mb, ms, mr, ma, replyto, end, pl, max, ax\n",
+            "Topic  2: did, time, say, like, didn, just, said, don, know, people\n",
+            "Topic  3: data, west, east, bit, higher, gas, lower, al, bits, db\n",
+            "Topic  4: ftp, format, version, files, software, images, data, available, file, image\n",
+            "Topic  5: amendment, output, house, united, states, firearms, mr, control, gun, file\n",
+            "Topic  6: working, press, groups, package, george, think, going, president, stephanopoulos, mr\n",
+            "Topic  7: electronic, use, posting, computer, mail, email, information, privacy, anonymous, internet\n",
+            "Topic  8: game, vs, division, games, season, new, nhl, team, league, hockey\n",
+            "Topic  9: scsi, interface, supports, floppy, card, controller, hard, drives, disk, drive\n",
+            "Topic 10: year, number, use, info, build, output, section, rules, program, entry\n",
+            "Topic 11: religion, christ, faith, christian, bible, believe, atheists, does, jesus, god\n",
+            "Topic 12: power, new, april, used, medical, states, ground, number, health, use\n",
+            "Topic 13: version, use, information, server, motif, set, application, available, widget, window\n",
+            "Topic 14: book, war, people, jewish, turks, armenians, armenian, turkey, jews, turkish\n",
+            "Topic 15: use, hardware, dos, mb, pc, ibm, mac, os, bit, scsi\n",
+            "Topic 16: services, technology, program, year, market, nasa, data, commercial, launch, space\n",
+            "Topic 17: going, program, government, official, russian, package, think, administration, ms, president\n",
+            "Topic 18: des, data, clipper, government, use, technology, law, chip, key, encryption\n",
+            "Topic 19: right, nntppostinghost, does, good, don, just, like, think, article, writes\n",
+            "Topic 20: way, attack, world, plan, time, military, new, secret, south, war\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xrs5YAJ0pUij",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        },
+        "outputId": "717c1b7b-e021-475d-ef48-d92d1ec69ce5"
+      },
+      "source": [
+        "print_nwords_each_topic(tfidf_vectorizer, H_tfidf)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Topic  1: really, writes, ve, time, good, know, like, think, just, don\n",
+            "Topic  2: running, problem, software, using, use, program, dos, files, file, windows\n",
+            "Topic  3: people, church, believe, christians, christian, faith, christ, bible, jesus, god\n",
+            "Topic  4: league, win, play, hockey, players, year, season, games, team, game\n",
+            "Topic  5: ftp, hi, post, email, thanks, wrote, version, tin, xnewsreader, pl\n",
+            "Topic  6: address, information, info, does, hi, looking, know, advance, email, thanks\n",
+            "Topic  7: mac, floppy, controller, disk, mb, hard, ide, drives, scsi, drive\n",
+            "Topic  8: security, public, secure, nsa, government, keys, clipper, encryption, chip, key\n",
+            "Topic  9: replyto, john, april, ca, data, article, writes, ms, ___, __\n",
+            "Topic 10: country, crime, right, guns, state, law, rights, gun, government, people\n",
+            "Topic 11: bob, jim, opinions, john, mike, david, michael, replyto, writes, article\n",
+            "Topic 12: nasa, university, asking, shipping, condition, price, offer, sale, space, new\n",
+            "Topic 13: ram, bit, mb, bus, driver, cards, monitor, drivers, video, card\n",
+            "Topic 14: writes, miles, article, driver, driving, insurance, speed, engine, cars, car\n",
+            "Topic 15: center, war, land, policy, peace, jewish, arab, jews, israeli, israel\n",
+            "Topic 16: said, russian, greek, today, turkey, turks, armenia, armenians, turkish, armenian\n",
+            "Topic 17: using, problem, display, server, event, widget, motif, application, manager, window\n",
+            "Topic 18: message, monitor, just, gmt, says, keith, internet, apr, articleid, nntppostinghost\n",
+            "Topic 19: red, chris, ve, road, like, left, got, right, dod, bike\n",
+            "Topic 20: articleid, usually, probably, test, blood, medical, soon, replyto, banks, gordon\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
