--- a/Twitter Sentiment Analysis/twitter_sentiment_analysis_modeling.ipynb
+++ b/Twitter Sentiment Analysis/twitter_sentiment_analysis_modeling.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "twitter_sentiment_analysis_modeling.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNn1vDoH5OLnrhEBxwLtUEx",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP9TbeF0vDAClKFgtftal23",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,7 @@
         "from sklearn.naive_bayes import MultinomialNB\n",
         "from sklearn.model_selection import cross_val_score"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +70,7 @@
         "train = pd.read_csv('train.csv')\n",
         "test = pd.read_csv('test.csv')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +90,7 @@
         "clf = MultinomialNB()\n",
         "cross_val_score(clf, X, train['label'], scoring='f1', cv=5, n_jobs=-1, verbose=10)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,8 +131,18 @@
         "result = pd.DataFrame({'id': test['id'], 'label': predictions})\n",
         "result.to_csv('test_predictions.csv', index=False)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2GbS2XRd0fCy",
+        "colab_type": "text"
+      },
+      "source": [
+        "wihiiiiiiiiiiiiii!!!"
+      ]
     }
   ]
 }
